--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!doctype html>
 <html lang="pt-BR">
+
   <head>
+
     <link href="css/geral.css" rel="stylesheet" />
     <meta charset="UTF-8">
     <title>Projeto</title>
+
 </head>
+
 <body>
 
-    <h1>Projeto Série</h1>
+  <h1>
+    Projeto Série
+  </h1>
+
+  <div id="corpo">
+
+    <div id="topo">
+      <h2>Topo</h2>
+    </div>
+
+    <div id="banner">
+      <h2>Banner</h2>
+    </div>
+
+    <div id="texto">
+      <h2>Texto</h2>
+    </div>
+
+    <div id="rodape">
+      <h2>Rodapé</h2>
+    </div>
+
+  </div>
 
 </body>
+
 </html>
