--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link href="css/geral.css" rel="stylesheet" />
     <meta charset="UTF-8">
-    <title>Projeto</title>
+    <title>Rate My Show</title>
 
 </head>
 
