--- a/index.html
+++ b/index.html
@@ -11,24 +11,22 @@
 
 <body>
 
-  <h1 id="titulo">Rate My Show</h1>
-
   <div id="corpo">
 
     <div id="topo">
-      <h2>Topo</h2>
     </div>
 
-    <div id="banner">
-      <h2>Banner</h2>
-    </div>
+    <div id="centro">
 
-    <div id="texto">
-      <h2>Texto</h2>
-    </div>
+      <div id="esquerda">
+      </div> 
+      
+      <div id="direita">
+      </div> 
+      
+    </div> 
 
     <div id="rodape">
-      <h2>Rodapé</h2>
     </div>
 
   </div>
