--- a/index.html
+++ b/index.html
@@ -14,19 +14,29 @@
   <div id="corpo">
 
     <div id="topo">
+
+      <img scr="imagens/logo-rms.png" width="200"/>
+
+      <h1>Rate My Show! :]</h1>
+
     </div>
 
-    <div id="centro">
-
+    <div id="trio">
+  
       <div id="esquerda">
       </div> 
-      
-      <div id="direita">
-      </div> 
 
-    </div> 
+      <div id="centro">
+        <p>Adicione uma série aqui -></p>
+      </div>
+        
+      <div id="direita">
+      </div>
+
+    </div>
 
     <div id="rodape">
+      <p>Rate My Show®</p>
     </div>
 
   </div>
