--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 
     <div id="topo">
 
-      <img scr="imagens/logo-rms.png" width="200"/>
-
-      <h1>Rate My Show! :]</h1>
+      <h1>Rate My Show!</h1>
 
     </div>
 
@@ -27,7 +25,6 @@
       </div> 
 
       <div id="centro">
-        <p>Adicione uma série aqui -></p>
       </div>
         
       <div id="direita">
