--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <div id="topo">
 
+      <img scr="imagens/logo-rms.png" alt="logo" id="logo">
+
       <h1>Rate My Show!</h1>
 
     </div>
