--- a/botao1.html
+++ b/botao1.html
@@ -27,9 +27,9 @@
       <div id="botao1">
 
         <section>
-          <a href="botao1.html">
+          <a href="index.html">
             <button>Home</button>
-          </a>          
+          </a>   
         </section>
 
       </div>
@@ -81,7 +81,7 @@
       <div id="esquerda">
 
         <section>
-          <img src="imagens/img1.png" width="200"/>
+          <img src="imagens/b1-img1.png" width="200"/>
         </section>
 
       </div> 
@@ -89,7 +89,7 @@
       <div id="centro">
 
         <section>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/VrgilL6qiKI?si=7yKNKLQcOb7KDrJo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/MXtTJVYU3PA?si=CnfTYL5fcqCEwAPL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
 
       </div>
@@ -97,7 +97,7 @@
       <div id="direita">
 
         <section>
-          <img src="imagens/img2.png" width="200"/>
+          <img src="imagens/b1-img2.png" width="200"/>
         </section>
 
       </div>
