--- a/botao2.html
+++ b/botao2.html
@@ -16,7 +16,7 @@
     <div id="topo">
 
       <section>
-        <img src="imagens/img4.png" width="100"/>
+        <img src="imagens/logo.png" width="100"/>
         <h1>RATE MY SHOW</h1>
       </section>
 
@@ -89,7 +89,7 @@
       <div id="centro">
 
         <section>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/_f_8kd_9Q8o?si=U-9szKSQ5smTe_i8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/diPba3bNy3o?si=X5JrxcYcxwXz61xN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
 
       </div>
@@ -107,7 +107,7 @@
     <div id="rodape">
 
       <section>
-        <img src="imagens/img3.png" width="100"/>
+        <img src="imagens/logo.png" width="100"/>
         <p>Rate My Show ®</p>
       </section>
 
