--- a/botao3.html
+++ b/botao3.html
@@ -6,6 +6,7 @@
     <link href="css/geral.css" rel="stylesheet" />
     <meta charset="UTF-8">
     <title>Rate My Show</title>
+    <link rel="website icon" type="png" href="imagens/web-logo.png">
 
 </head>
 
