--- a/botao5.html
+++ b/botao5.html
@@ -74,8 +74,6 @@
 
       </div>
 
-      </div>
-
     </div>
 
     <div id="meio">
@@ -83,12 +81,7 @@
       <div id="centro">
 
         <section>
-          <h2>Compartilhe suas opniões sobre cada episódio mágico com o mundo!</h2>
-          <div id="botao-login">
-            <section>
-              <button>Crie uma conta para começar logar as séries</button> 
-            </section>
-          </div>
+          <h2>Compartilhe suas opniões sobre o site (Em construção...)</h2>
         </section>
 
       </div>
