--- a/botao2.html
+++ b/botao2.html
@@ -38,7 +38,7 @@
 
         <section>
           <a href="botao2.html">
-            <button>Conta</button>
+            <button>Sobre</button>
           </a>  
         </section>
 
@@ -81,7 +81,10 @@
       <div id="centro">
 
         <section>
-          <h2>Veja sua conta aqui (Em construção.....)</h2>
+          <h2>Conheça o Rate My Show</h2>
+          <p>Olá! Meu nome é Natalia Lambert Nivaldo e sou aluna do 3º ano do curso técnico em Informática no IFTO – Campus Paraíso, no ano de 2025. O Rate My Show é um projeto que estou desenvolvendo para a disciplina de Desenvolvimento Web, orientada pelo professor Eraldo Maciel.</p>
+          <p>Inspirado no site Letterboxd, meu site tem como objetivo permitir que os usuários compartilhem opiniões e avaliações sobre séries e episódios de forma pessoal e organizada. Aqui, você poderá "logar" uma série — ou seja, adicioná-la ao seu perfil — para escrever uma review (análise) e dar uma nota geral. Depois disso, será possível também logar cada episódio individualmente, com notas e reviews específicas.</p>
+          <p>Este é um espaço feito por quem ama maratonar, para quem ama discutir cada detalhe do que assiste!</p>
         </section>
 
       </div>
