--- a/botao3.html
+++ b/botao3.html
@@ -38,7 +38,7 @@
 
         <section>
           <a href="botao2.html">
-            <button>Conta</button>
+            <button>Sobre</button>
           </a>  
         </section>
 
