--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <section>
           <a href="botao2.html">
-            <button>Conta</button>
+            <button>Sobre</button>
           </a>  
         </section>
 
@@ -84,11 +84,43 @@
 
         <section>
           <h2>Compartilhe suas opniões sobre cada episódio mágico com o mundo!</h2>
+
           <div id="botao-login">
             <section>
               <button>Crie uma conta para começar logar as séries</button> 
             </section>
           </div>
+
+          <div class="poster-gallery">
+            <img src="imagens/friends-poster.jpg">
+            <img src="imagens/himym-poster.jpg">
+            <img src="imagens/the-big-bang-theory-poster.jpg">
+            <img src="imagens/the-office-poster.jpg">
+            <img src="imagens/moder-family-poster.png">
+            <img src="imagens/greys-anatomy-poster.jpg">
+          </div>
+
+          <div class="reviews-section">
+            <h3>Reviews Populares Essa Semana</h3>
+          
+            <div class="review">
+              <img src="imagens/moder-family-poster.png" class="review-poster" />
+              <div class="review-content">
+                <h4>Modern Family (EP 1, T1)<span class="year">2009</span></h4>
+                <p class="user">lambertnati <span class="rating">★★★★★</span> <span class="likes">❤️ 19,370</span> <span class="comments">💬 38</span></p>
+                <p class="comment">maior feito do século 21</p>
+              </div>
+            </div>
+
+            <div class="review">
+              <img src="imagens/the-big-bang-theory-poster.jpg" class="review-poster" />
+              <div class="review-content">
+                <h4>The Big Bang Theory (EP 15, T3)<span class="year">2010</span></h4>
+                <p class="user">bianqaw <span class="rating">★★★★</span> <span class="likes">❤️ 5,411</span> <span class="comments">💬 12</span></p>
+                <p class="comment">nerds demais, adoro</p>
+              </div>
+            </div>
+
         </section>
 
       </div>
