--- a/botao2.html
+++ b/botao2.html
@@ -83,8 +83,9 @@
         <section>
           <h2>Conheça o Rate My Show</h2>
           <p>Olá! Meu nome é Natalia Lambert Nivaldo e sou aluna do 3º ano do curso técnico em Informática no IFTO – Campus Paraíso, no ano de 2025. O Rate My Show é um projeto que estou desenvolvendo para a disciplina de Desenvolvimento Web, orientada pelo professor Eraldo Maciel.</p>
-          <p>Inspirado no site Letterboxd, meu site tem como objetivo permitir que os usuários compartilhem opiniões e avaliações sobre séries e episódios de forma pessoal e organizada. Aqui, você poderá "logar" uma série — ou seja, adicioná-la ao seu perfil — para escrever uma review (análise) e dar uma nota geral. Depois disso, será possível também logar cada episódio individualmente, com notas e reviews específicas.</p>
-          <p>Este é um espaço feito por quem ama maratonar, para quem ama discutir cada detalhe do que assiste!</p>
+          <p">Inspirado no site Letterboxd, no Rate My Show eu compartilho avaliações sobre as séries que eu estou assistindo, como um blog!</p>
+          <p>Meu obejtivo seria permitir você "logar" uma série — ou seja, adicioná-la ao seu perfil — para escrever uma review (análise) e dar uma nota geral. Depois disso, será possível também logar cada episódio individualmente, com notas e reviews específicas. Porém, infelizmente não consegui desenvolver isso a tempo da apresentação do projeto, ficando essa pate direcionada a projetos futuros!</p>
+          <p>Aguarde os próximos episódios para ver até onde o Rate My Show vai chegar. Enquanto isso... divirta-se!!!</p>
         </section>
 
       </div>
