--- a/form-contato.html
+++ b/form-contato.html
@@ -38,7 +38,7 @@
 
         <section>
           <a href="botao2.html">
-            <button>Conta</button>
+            <button>Sobre</button>
           </a>  
         </section>
 
@@ -82,7 +82,7 @@
 
         <section>
 
-          <h2>Fale conosco!</h2>
+          <h2>Fale comigo!</h2>
           <form onsubmit="return validarFormulario();">
             <fieldset>
               <legend>Informações Pessoais</legend>
@@ -148,6 +148,10 @@
               return true;
             }
           </script>
+
+          <a href="botao5.html">
+            <button>Voltar</button>
+          </a>
         
         </section>
 
