--- a/index.html
+++ b/index.html
@@ -83,25 +83,22 @@
       <div id="centro">
 
         <section>
-          <h2>Compartilhe suas opniões sobre cada episódio mágico com o mundo!</h2>
-
-          <div id="botao-login">
-            <section>
-              <button>Crie uma conta para começar logar as séries</button> 
-            </section>
-          </div>
+          <h2>Veja o que lambertnati anda assistindo</h2>
 
           <div class="poster-gallery">
-            <img src="imagens/friends-poster.jpg">
-            <img src="imagens/himym-poster.jpg">
-            <img src="imagens/the-big-bang-theory-poster.jpg">
-            <img src="imagens/the-office-poster.jpg">
-            <img src="imagens/moder-family-poster.png">
-            <img src="imagens/greys-anatomy-poster.jpg">
+            <h3>Favoritos Da Semana</h3> 
+            <div class="poster">
+              <img src="imagens/moder-family-poster.png">
+              <img src="imagens/tapas-e-beijos-poster.jpg">
+              <img src="imagens/the-big-bang-theory-poster.jpg">
+              <img src="imagens/the-office-poster.jpg">
+              <img src="imagens/os-normais-poster.jpg">
+              <img src="imagens/himym-poster.jpg">
+            </div>
           </div>
 
           <div class="reviews-section">
-            <h3>Reviews Populares Essa Semana</h3>
+            <h3>Últimas Reviews Da Semana</h3>
           
             <div class="review">
               <img src="imagens/moder-family-poster.png" class="review-poster" />
@@ -116,8 +113,8 @@
               <img src="imagens/the-big-bang-theory-poster.jpg" class="review-poster" />
               <div class="review-content">
                 <h4>The Big Bang Theory (EP 15, T3)<span class="year">2010</span></h4>
-                <p class="user">bianqaw <span class="rating">★★★★</span> <span class="likes">❤️ 5,411</span> <span class="comments">💬 12</span></p>
-                <p class="comment">nerds demais, adoro</p>
+                <p class="user">lambertnati <span class="rating">★★★★</span> <span class="likes">❤️ 5,411</span> <span class="comments">💬 12</span></p>
+                <p class="comment">eu si divirto</p>
               </div>
             </div>
 
