--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div id="centro">
 
         <section>
-          <h2>Veja o que lambertnati anda assistindo</h2>
+          <h2>Veja o que <a id="link" href="botao3.html">lambertnati</a> anda assistindo...</h2> <br>
 
           <div class="poster-gallery">
             <h3>Favoritos Da Semana</h3> 
