--- a/botao2.html
+++ b/botao2.html
@@ -82,10 +82,10 @@
 
         <section>
           <h2>Conheça o Rate My Show</h2>
-          <p>Olá! Meu nome é Natalia Lambert Nivaldo e sou aluna do 3º ano do curso técnico em Informática no IFTO – Campus Paraíso, no ano de 2025. O Rate My Show é um projeto que estou desenvolvendo para a disciplina de Desenvolvimento Web, orientada pelo professor Eraldo Maciel.</p>
-          <p">Inspirado no site Letterboxd, no Rate My Show eu compartilho avaliações sobre as séries que eu estou assistindo, como um blog!</p>
-          <p>Meu obejtivo seria permitir você "logar" uma série — ou seja, adicioná-la ao seu perfil — para escrever uma review (análise) e dar uma nota geral. Depois disso, será possível também logar cada episódio individualmente, com notas e reviews específicas. Porém, infelizmente não consegui desenvolver isso a tempo da apresentação do projeto, ficando essa pate direcionada a projetos futuros!</p>
-          <p>Aguarde os próximos episódios para ver até onde o Rate My Show vai chegar. Enquanto isso... divirta-se!!!</p>
+          <div class="container-sobre">
+            <div class="esquerda"> <p>Olá! Meu nome é Natalia Lambert Nivaldo e sou aluna do 3º ano do curso técnico em Informática no IFTO – Campus Paraíso, no ano de 2025. O Rate My Show é um projeto que estou desenvolvendo para a disciplina de Desenvolvimento Web, orientada pelo professor Eraldo Maciel. <br> <br> Inspirado no site Letterboxd, no Rate My Show eu compartilho avaliações sobre as séries que eu estou assistindo, como um blog!</p> </div>
+            <div class="direita"> <p>Meu obejtivo seria permitir você "logar" uma série — ou seja, adicioná-la ao seu perfil — para escrever uma review (análise) e dar uma nota geral. Depois disso, será possível também logar cada episódio individualmente, com notas e reviews específicas. Porém, infelizmente não consegui desenvolver isso a tempo da apresentação do projeto, ficando essa pate direcionada a projetos futuros! <br> <br> Aguarde os próximos episódios para ver até onde o Rate My Show vai chegar. Enquanto isso... divirta-se!!!</p> </div>
+          </div>
         </section>
 
       </div>
