--- a/botao5.html
+++ b/botao5.html
@@ -82,7 +82,7 @@
       <div id="centro">
 
         <section>
-          <h2>Fale conosco!</h2>
+          <h2>Fale comigo!</h2>
           <p>Compartilhe reclamações, sugestões e opniões em geral sobre o Rate My Show no formulário abaixo.</p>
 
           <a href="form-contato.html">
