--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
 
           <div class="reviews-section">
-            <h3>Últimas Reviews Da Semana</h3>
+            <h3>Melhores Reviews Da Semana</h3>
           
             <div class="review">
               <img src="imagens/moder-family-poster.png" class="review-poster" />
