--- a/botao4.html
+++ b/botao4.html
@@ -39,23 +39,28 @@
       <div id="centro">
 
         <section>
-          <h1>Minha Lista</h1>
       
           <div class="container">
             <div class="secao">
-              <h2>Quero assistir (85 filmes)</h2>
+              <h1>Minha Lista</h1>
+              <h2>Quero assistir (10 séries)</h2>
               <hr>
               <div class="galeria-lista">
-                  <img src="imagens/filme1.jpg" alt="Filme 1">
-                  <img src="imagens/filme2.jpg" alt="Filme 2">
-                  <img src="imagens/filme3.jpg" alt="Filme 3">
-                  <img src="imagens/filme4.jpg" alt="Filme 4">
-                  <img src="imagens/filme5.jpg" alt="Filme 5">
-                  <img src="imagens/filme6.jpg" alt="Filme 6">
-                  <img src="imagens/filme7.jpg" alt="Filme 7">
-                  <img src="imagens/filme8.jpg" alt="Filme 8">
-                  <img src="imagens/filme9.jpg" alt="Filme 9">
-                  <img src="imagens/filme10.jpg" alt="Filme 10">
+                  <img src="imagens/lista-blck-mirror.jpg">
+                  <img src="imagens/lista-breaking-bad.jpg">
+                  <img src="imagens/lista-bridgerton.jpg">
+                  <img src="imagens/lista-brooklyn_nine.jpg">
+                  <img src="imagens/lista-dexter.jpg">
+                  <img src="imagens/lista-hannibal.jpg">
+                  <img src="imagens/lista-lost.jpg">
+                  <img src="imagens/lista-jovem-sheldon.jpg">
+                  <img src="imagens/lista-cobra-kai.jpg">
+                  <img src="imagens/lista-the-walking-dead.jpg">
+                  <img scr="imagens/">
+                  <img scr="imagens/">
+                  <img scr="imagens/">
+                  <img scr="imagens/">
+                  
               </div>
             </div>
           </div>
