--- a/botao4.html
+++ b/botao4.html
@@ -43,7 +43,7 @@
           <div class="container">
             <div class="secao">
               <h1>Minha Lista</h1>
-              <h2>Quero assistir (10 séries)</h2>
+              <h2>Quero assistir (21 séries)</h2>
               <hr>
               <div class="galeria-lista">
                   <img src="imagens/lista-blck-mirror.jpg">
@@ -56,12 +56,19 @@
                   <img src="imagens/lista-jovem-sheldon.jpg">
                   <img src="imagens/lista-cobra-kai.jpg">
                   <img src="imagens/lista-the-walking-dead.jpg">
-                  <img scr="imagens/">
-                  <img scr="imagens/">
-                  <img scr="imagens/">
-                  <img scr="imagens/">
-                  
+                  <img src="imagens/lista-dark.png">
+                  <img src="imagens/lista-demon-slayer.jpg">
+                  <img src="imagens/lista-lupin.jpg">
+                  <img src="imagens/lista-sam-e-cat.jpg">
+                  <img src="imagens/lista-the-witcher.jpg">
+                  <img src="imagens/lista-vis-avis.jpg">
+                  <img src="imagens/lista-voce.jpg">
+                  <img src="imagens/lista-cidade-invisivel.jpeg">
+                  <img src="imagens/lista-phineas-ferb.jpg">
+                  <img src="imagens/lista-the-boys.jpg">
+                  <img src="imagens/lista-fleabag.jpg">
               </div>
+              <hr>
             </div>
           </div>
 
